css指定を絶対パスに

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>{{page.title}}</title>
-<link rel="stylesheet" href="styles-site.css" type="text/css" />
+<link rel="stylesheet" href="http://krkrz.github.io/documents/styles-site.css" type="text/css" />
 </head>
 <body>
 <a name="top"></a>
