設定変更、フィード追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>{{page.title}}</title>
+{% feed_meta %}
 <link rel="stylesheet" href="http://krkrz.github.io/documents/styles-site.css" type="text/css" />
 </head>
 <body>
