ドキュメントのライセンス表示をテンプレートに移動。KKEFZに追記。

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
 <div class="content">
 {{content}}
 <br />
+<br />
+<h3 id="このドキュメントのライセンス"><a href="https://krkrz.github.io/documents/LICENSE.html">このドキュメントのライセンス</a></h3>
+<br />
+<br />
 </div>
 </div>
 </body>
