添加空格换行，修改url指引

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 {{content}}
 <br />
 <br />
-<h3 id="このドキュメントのライセンス"><a href="https://krkrz.github.io/documents/LICENSE.html">このドキュメントのライセンス</a></h3>
+<h3 id="此文档的许可证"><a href="https://kimoritama.github.io/documents/LICENSE.html">此文档的许可证</a></h3>
 <br />
 <br />
 </div>
